handle psutil exceptions when generating RayOutOfMemory message (#109)
* handle psutil exceptions when generating RayOutOfMemory message

* add process entry to proc_stats even when an exception occurs

* Pinned aiohttp and aioredis versions

* Pinned aiohttp and aioredis versions

* sudo nvm install node

* make ssh stop fault-tolerant

* fixed Docker image command

* enable installation of NodeJS in Mac

* enable installation of NodeJS in Mac

* update hash

Co-authored-by: Edilmo Palencia <edilmo@gmail.com>

--- a/ci/azure_pipelines/main.yml
+++ b/ci/azure_pipelines/main.yml
@@ -375,7 +375,7 @@ stages:
               versionSpec: '10.x'
               checkLatest: true
             displayName: 'Install latest Node.js'
-            condition: and(succeeded(), ne('$(Agent.OS)', 'Darwin'))
+            condition: succeeded()
           # Template containing the installation of steps of python
           - template: templates/python.yml
           # Template containing the installation of steps of bazel
