--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,8 +5,8 @@
 # In short, if you change it here, PLEASE also change it in setup.py.
 #
 # setup.py install_requires
-aiohttp==3.7
-aioredis
+aiohttp==3.7.4
+aioredis==1.3.1
 click >= 7.0
 cloudpickle
 colorama
