--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -78,6 +78,7 @@ define_java_module(
         "@maven//:com_google_code_gson_gson",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_protobuf_protobuf_java",
+        "@maven//:com_google_protobuf_protobuf_java_util",
         "@maven//:com_lmax_disruptor",
         "@maven//:com_typesafe_config",
         "@maven//:commons_io_commons_io",
@@ -188,6 +189,11 @@ java_proto_compile(
 )
 
 java_proto_compile(
+    name = "runtime_env_common_java_proto",
+    deps = ["@//src/ray/protobuf:runtime_env_common_proto"],
+)
+
+java_proto_compile(
     name = "gcs_java_proto",
     deps = ["@//src/ray/protobuf:gcs_proto"],
 )
@@ -202,6 +208,7 @@ filegroup(
     srcs = [
         ":common_java_proto",
         ":gcs_java_proto",
+        ":runtime_env_common_java_proto",
     ],
 )
 
