catch errors caused by bad deployment configurations

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -43,6 +43,7 @@ tensorboardX >= 1.9
 uvicorn
 dataclasses; python_version < '3.7'
 starlette
+tblib
 
 # Requirements for running tests
 pyarrow==4.0.1
