Initial support for absl::BitGen

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -442,6 +442,7 @@ cc_library(
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
+        "@com_google_absl//absl/random",
         "@com_google_googletest//:gtest",
         "@msgpack",
         "@nlohmann_json",
@@ -1919,6 +1920,7 @@ cc_library(
         "@com_google_absl//absl/debugging:symbolize",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
+        "@com_google_absl//absl/random",
         "@com_google_googletest//:gtest_main",
         "@nlohmann_json",
     ],
