--- a/dashboard/client/package.json
+++ b/dashboard/client/package.json
@@ -33,7 +33,8 @@
     "react-window": "^1.8.5",
     "typeface-roboto": "0.0.75",
     "typescript": "3.8.3",
-    "use-debounce": "^3.4.3"
+    "use-debounce": "^3.4.3",
+    "@cypress/request": "2.88.7"
   },
   "devDependencies": {
     "eslint-plugin-import": "2.20.1",
