--- a/python/requirements/ml/requirements_tune.txt
+++ b/python/requirements/ml/requirements_tune.txt
@@ -29,7 +29,7 @@ nevergrad==0.4.3.post7
 optuna==2.9.1
 pytest-remotedata==0.3.2
 lightning-bolts==0.4.0
-pytorch-lightning==1.4.9
+pytorch-lightning>=1.5.3
 shortuuid==1.0.1
 scikit-learn==0.24.2
 scikit-optimize==0.8.1
