--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -24,6 +24,7 @@ py_test_module_list(
     "test_basic_2.py",
     "test_basic_3.py",
     "test_basic_4.py",
+    "test_basic_5.py",
     "test_cancel.py",
     "test_metrics_agent.py",
     "test_component_failures_2.py",
@@ -363,6 +364,7 @@ py_test_module_list(
     "test_basic_2.py",
     "test_basic_3.py",
     "test_basic_4.py",
+    "test_basic_5.py",
     "test_asyncio.py",
     "test_multiprocessing.py",
     "test_list_actors.py",
