--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -249,7 +249,8 @@ py_test_module_list(
   files = [
     "test_runtime_env.py",
     "test_runtime_env_working_dir.py",
-    "test_runtime_env_working_dir_2.py"
+    "test_runtime_env_working_dir_2.py",
+    "test_runtime_env_working_dir_remote_uri.py"
   ],
   size = "large",
   extra_srcs = SRCS,
