--- a/.buildkite/windows/Dockerfile
+++ b/.buildkite/windows/Dockerfile
@@ -1,14 +1,4 @@
-FROM mcr.microsoft.com/windows/servercore:ltsc2019
-
+FROM rayproject/buildenv:windows
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-COPY install C:/Install/
-WORKDIR C:/Install
-
+RUN ls
 RUN Write-Output "Dry run windows docker build"
-# RUN ./main.ps1
-# RUN ./java.ps1
-# RUN ./miniconda.ps1
-# RUN ./git.ps1
-# RUN ./bazel.ps1
-# RUN ./msys.ps1
-# RUN ./ray.ps1
