--- a/.buildkite/Dockerfile
+++ b/.buildkite/Dockerfile
@@ -4,13 +4,14 @@ ARG REMOTE_CACHE_URL
 ARG BUILDKITE_PULL_REQUEST
 ARG BUILDKITE_COMMIT
 ARG BUILDKITE_PULL_REQUEST_BASE_BRANCH
+ARG PYTHON=3.6
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/Los_Angeles
 
 ENV BUILDKITE=true
 ENV CI=true
-ENV PYTHON=3.6
+ENV PYTHON=$PYTHON
 ENV RAY_USE_RANDOM_PORTS=1
 ENV RAY_DEFAULT_BUILD=1
 ENV RAY_INSTALL_JAVA=1
