--- a/release/nightly_tests/dataset/pipelined_ingestion_app.yaml
+++ b/release/nightly_tests/dataset/pipelined_ingestion_app.yaml
@@ -1,5 +1,5 @@
 base_image: "anyscale/ray-ml:nightly-py37-gpu"
-
+env_vars: {"RAY_lineage_pinning_enabled": "1"}
 python:
   pip_packages:
     - pyarrow
