--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1790,6 +1790,21 @@ cc_library(
 )
 
 cc_test(
+    name = "accessor_test",
+    size = "small",
+    srcs = [
+        "src/ray/gcs/gcs_client/test/accessor_test.cc",
+    ],
+    copts = COPTS,
+    tags = ["team:core"],
+    deps = [
+        ":gcs_client_lib",
+        ":gcs_test_util_lib",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "global_state_accessor_test",
     size = "small",
     srcs = [
