--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -216,7 +216,7 @@ py_test(
 
 py_test(
     name = "test_sample",
-    size = "medium",
+    size = "large",
     srcs = ["tests/test_sample.py"],
     deps = [":tune_lib"],
     tags = ["team:ml", "exclusive", "tests_dir_S"],
