--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -224,7 +224,7 @@ py_test(
 
 py_test(
     name = "test_cluster",
-    size = "small",
+    size = "medium",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve"],
     deps = [":serve_lib"],
