--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -375,6 +375,7 @@ cc_library(
     strip_include_prefix = "src",
     deps = [
         ":plasma_client",
+        ":stats_lib",
     ],
 )
 
@@ -594,9 +595,11 @@ cc_library(
     name = "stats_metric",
     srcs = [
         "src/ray/stats/metric.cc",
+        "src/ray/stats/metric_defs.cc",
     ],
     hdrs = [
         "src/ray/stats/metric.h",
+        "src/ray/stats/metric_defs.h",
         "src/ray/stats/tag_defs.h",
     ],
     strip_include_prefix = "src",
@@ -623,7 +626,6 @@ cc_library(
     ],
     hdrs = [
         "src/ray/stats/metric.h",
-        "src/ray/stats/metric_defs.h",
         "src/ray/stats/metric_exporter.h",
         "src/ray/stats/metric_exporter_client.h",
         "src/ray/stats/stats.h",
