--- a/release/nightly_tests/dataset/dataset_ingest_400G_compute.yaml
+++ b/release/nightly_tests/dataset/dataset_ingest_400G_compute.yaml
@@ -1,7 +1,7 @@
 cloud_id: cld_17WvYIBBkdgLwEUNcLeRAE
 region: us-west-2
 
-max_workers: 0
+max_workers: 15
 
 aws:
     IamInstanceProfile: {"Name": "ray-autoscaler-v1"}
@@ -12,11 +12,15 @@ aws:
 
 head_node_type:
     name: head_node
-    instance_type: g4dn.16xlarge
+    instance_type: g5.8xlarge
+    resources:
+      gpu: 1
 
 worker_node_types:
     - name: memory_node
-      instance_type: i3.8xlarge
-      min_workers: 0
-      max_workers: 0
+      instance_type: g5.8xlarge
+      min_workers: 15
+      max_workers: 15
       use_spot: false
+      resources:
+        gpu: 1
