--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -74,6 +74,7 @@ opentelemetry-sdk==1.1.0
 opentelemetry-exporter-otlp==1.1.0
 pexpect
 Pillow; platform_system != "Windows"
+pyasn1==0.4.8
 pygments
 pyspark==3.1.2
 pytest==5.4.3
