separate the test_runtime_env_conda

--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -260,7 +260,8 @@ py_test_module_list(
 
 py_test_module_list(
   files = [
-    "test_runtime_env_conda.py"
+    "test_runtime_env_conda.py",
+    "test_runtime_env_conda_2.py"
   ],
   size = "large",
   extra_srcs = SRCS,
