Add multinode test suite, install docker

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -691,6 +691,18 @@
     - ./ci/travis/install-dependencies.sh
     - bazel test --config=ci $(./scripts/bazel_export_options) --build_tests_only --test_tag_filters=soft_imports python/ray/tune/...
 
+- label: ":octopus: Tune multinode tests"
+  conditions: ["RAY_CI_TUNE_AFFECTED"]
+  commands:
+    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/travis/upload_build_info.sh; fi }; trap cleanup EXIT
+    - TUNE_TESTING=1 PYTHON=3.7 ./ci/travis/install-dependencies.sh
+    - curl -fsSL https://get.docker.com -o get-docker.sh && sh ./get-docker.sh
+    - sudo service docker start
+    # Because Python version changed, we need to re-install Ray here
+    - bazel test --config=ci $(./scripts/bazel_export_options) --build_tests_only
+      --test_tag_filters=multinode,-example,-flaky,-py37,-soft_imports,-gpu_only,-rllib
+      python/ray/tune/...
+
 - label: ":steam_locomotive: Train tests and examples"
   conditions: ["RAY_CI_TRAIN_AFFECTED"]
   commands:
