--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -57,6 +57,7 @@ boto3
 cython >= 0.29.15
 dataclasses; python_version < '3.7'
 feather-format
+google-auth-oauthlib~=0.4.6
 google-api-python-client
 google-cloud-storage
 gym-minigrid
