--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -209,8 +209,8 @@ py_test_module_list(
 
 py_test_module_list(
   files = [
-    "test_runtime_env_conda.py"
-    "test_runtime_env_complicated.py"
+    "test_runtime_env_conda.py",
+    "test_runtime_env_complicated.py",
   ],
   size = "large",
   extra_srcs = SRCS,
