fix error and update unit test

--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -74,7 +74,7 @@ py_test(
 
 py_test(
     name = "test_metrics",
-    size = "small",
+    size = "medium",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve"],
     deps = [":serve_lib"],
