[RLlib] Experimental no-flatten option for actions/prev-actions. (#20918)

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1494,6 +1494,14 @@ py_test(
 )
 
 py_test(
+    name = "tests/test_nested_action_spaces",
+    main = "tests/test_nested_action_spaces.py",
+    tags = ["team:ml", "tests_dir", "tests_dir_N"],
+    size = "medium",
+    srcs = ["tests/test_nested_action_spaces.py"]
+)
+
+py_test(
     name = "tests/test_nested_observation_spaces",
     main = "tests/test_nested_observation_spaces.py",
     tags = ["team:ml", "tests_dir", "tests_dir_N"],
