--- a/release/rllib_tests/performance_tests/performance_tests.yaml
+++ b/release/rllib_tests/performance_tests/performance_tests.yaml
@@ -100,6 +100,7 @@ cql-halfcheetahbulletenv-v0:
         evaluation_interval: 3
         evaluation_config:
             input: sampler
+        always_attach_evaluation_results: True
 
 sac-halfcheetahbulletenv-v0:
     env: HalfCheetahBulletEnv-v0
