--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -210,7 +210,7 @@ py_test_module_list(
 py_test_module_list(
   files = [
     "test_runtime_env_conda.py",
-    "test_runtime_env_conda_2.py"
+    "test_runtime_env_conda_2.py",
     "test_runtime_env_complicated.py",
   ],
   size = "large",
