--- a/.buildkite/pipeline.ml.yml
+++ b/.buildkite/pipeline.ml.yml
@@ -250,12 +250,13 @@
 - label: ":octopus: Tune multinode tests"
   conditions: [ "RAY_CI_TUNE_AFFECTED" ]
   commands:
-    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/travis/upload_build_info.sh; fi }; trap cleanup EXIT
+    - LINUX_WHEELS=1 ./ci/travis/ci.sh build
     - mkdir -p ~/.docker/cli-plugins/ && curl -SL https://github.com/docker/compose/releases/download/v2.0.1/docker-compose-linux-x86_64 -o ~/.docker/cli-plugins/docker-compose && chmod +x ~/.docker/cli-plugins/docker-compose
-    # Because Python version changed, we need to re-install Ray here
+    - pip install -U docker aws_requests_auth boto3
+    - python ./ci/travis/build-docker-images.py --py-versions py37 --device-types cpu --build-type BUILDKITE --build-base --only-build-worker-container
     - bazel test --config=ci $(./scripts/bazel_export_options) --build_tests_only
       --test_tag_filters=multinode,-example,-flaky,-py37,-soft_imports,-gpu_only,-rllib
-      python/ray/tune/...
+      python/ray/tune/... --test_env=RAY_DOCKER_IMAGE="rayproject/ray-worker-container:nightly-py37-cpu"
 
 - label: ":octopus: Tune examples {w/o tf/pytorch; no RLlib}"
   conditions: ["RAY_CI_TUNE_AFFECTED"]
