--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -210,6 +210,7 @@ py_test_module_list(
 py_test_module_list(
   files = [
     "test_runtime_env_conda_and_pip.py",
+    "test_runtime_env_conda_and_pip_2.py",
     "test_runtime_env_complicated.py"
   ],
   size = "large",
