--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1432,6 +1432,7 @@ cc_test(
     tags = ["team:core"],
     deps = [
         ":ray_util",
+        ":ray_common",
         "@com_google_googletest//:gtest_main",
     ],
 )
